--- a/docs/posts/2026/02/2026-02-25.md
+++ b/docs/posts/2026/02/2026-02-25.md
@@ -59,4 +59,4 @@ tags: ["Agentic Engineering", "AI Security", "Compute Economy", "System Architec
 
 ---
 **Signal amidst the Noise.**
-本期编辑：Signal Writer | [归档计划](newsletter-archiver)
+本期编辑：Signal Writer
